src/main/java/com/mylaensys/isis/dsl/dhtmlx/dhtmlxParser.java
// Generated from /home/maurizio/IdeaProjects/dhtmlx-isis-viewer/dhtmlx.g4 by ANTLR 4.0

    package com.mylaensys.isis.dsl.dhtmlx;
    import  java.util.*;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class dhtmlxParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__43=1, T__42=2, T__41=3, T__40=4, T__39=5, T__38=6, T__37=7, T__36=8, 
		T__35=9, T__34=10, T__33=11, T__32=12, T__31=13, T__30=14, T__29=15, T__28=16, 
		T__27=17, T__26=18, T__25=19, T__24=20, T__23=21, T__22=22, T__21=23, 
		T__20=24, T__19=25, T__18=26, T__17=27, T__16=28, T__15=29, T__14=30, 
		T__13=31, T__12=32, T__11=33, T__10=34, T__9=35, T__8=36, T__7=37, T__6=38, 
		T__5=39, T__4=40, T__3=41, T__2=42, T__1=43, T__0=44, WS=45, LBRACKET=46, 
		RBRACKET=47, LPAREN=48, RPAREN=49, INTEGER=50, SEMI=51, ROW=52, COL=53, 
		DOT=54, LINK=55, LT=56, GT=57, SEPARATOR=58, SPACER=59, SETTINGS=60, HEX=61, 
		ESCAPE=62, UNI=63, LETTER=64, DIGIT=65, STRING=66, COMMENT=67, ID=68;
	public static final String[] tokenNames = {
		"<INVALID>", "'1..N'", "'b'", "'left'", "'self'", "'3E'", "'inputHeight'", 
		"'inputWidth'", "'id'", "'''", "'{'", "'@Top'", "'2U'", "'center'", "'3U'", 
		"'label-top'", "'size'", "'labelAlign'", "'3W'", "'}'", "'label-right'", 
		"'labelWidth'", "'auto'", "'bottom'", "'a'", "'active'", "'c'", "'prompt'", 
		"'height'", "'@Bottom'", "'3T'", "'labelHeight'", "'2E'", "'3L'", "'top'", 
		"'right'", "'position'", "'1C'", "'3J'", "'label-left'", "'text'", "'width'", 
		"'Tab'", "'..'", "'mode'", "WS", "'['", "']'", "'('", "')'", "INTEGER", 
		"':'", "';'", "','", "'.'", "'->'", "'<'", "'>'", "'|'", "'||'", "'default'", 
		"HEX", "ESCAPE", "UNI", "LETTER", "DIGIT", "STRING", "COMMENT", "ID"
	};
	public static final int
		RULE_dhtmlx = 0, RULE_view = 1, RULE_expression = 2, RULE_property = 3, 
		RULE_action = 4, RULE_prompt = 5, RULE_link = 6, RULE_layout = 7, RULE_cells = 8, 
		RULE_cell = 9, RULE_cellcontent = 10, RULE_toolbar = 11, RULE_toolbarItems = 12, 
		RULE_toolbarItem = 13, RULE_toolbarButton = 14, RULE_toolbarText = 15, 
		RULE_toolbarSpacer = 16, RULE_toolbarSeparator = 17, RULE_status = 18, 
		RULE_paging = 19, RULE_collection = 20, RULE_grid = 21, RULE_columns = 22, 
		RULE_dataview = 23, RULE_tabbar = 24, RULE_tabs = 25, RULE_tab = 26, RULE_tabcontent = 27, 
		RULE_form = 28, RULE_newcolumn = 29, RULE_group = 30, RULE_block = 31, 
		RULE_widgetList = 32, RULE_widget = 33, RULE_settings = 34, RULE_attribute = 35, 
		RULE_position = 36, RULE_labelWidth = 37, RULE_labelHeight = 38, RULE_inputWidth = 39, 
		RULE_inputHeight = 40, RULE_labelAlign = 41, RULE_id = 42, RULE_text = 43, 
		RULE_width = 44, RULE_height = 45, RULE_size = 46, RULE_active = 47, RULE_orientation = 48;
	public static final String[] ruleNames = {
		"dhtmlx", "view", "expression", "property", "action", "prompt", "link", 
		"layout", "cells", "cell", "cellcontent", "toolbar", "toolbarItems", "toolbarItem", 
		"toolbarButton", "toolbarText", "toolbarSpacer", "toolbarSeparator", "status", 
		"paging", "collection", "grid", "columns", "dataview", "tabbar", "tabs", 
		"tab", "tabcontent", "form", "newcolumn", "group", "block", "widgetList", 
		"widget", "settings", "attribute", "position", "labelWidth", "labelHeight", 
		"inputWidth", "inputHeight", "labelAlign", "id", "text", "width", "height", 
		"size", "active", "orientation"
	};

	@Override
	public String getGrammarFileName() { return "dhtmlx.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }


	    ParserHelper helper;

	public dhtmlxParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DhtmlxContext extends ParserRuleContext {
		public FormContext form() {
			return getRuleContext(FormContext.class,0);
		}
		public ViewContext view() {
			return getRuleContext(ViewContext.class,0);
		}
		public DhtmlxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dhtmlx; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).enterDhtmlx(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).exitDhtmlx(this);
		}
	}

	public final DhtmlxContext dhtmlx() throws RecognitionException {
		DhtmlxContext _localctx = new DhtmlxContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_dhtmlx);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(98); view();
				}
				break;

			case 2:
				{
				setState(99); form();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ViewContext extends ParserRuleContext {
		public FormContext form() {
			return getRuleContext(FormContext.class,0);
		}
		public TabbarContext tabbar() {
			return getRuleContext(TabbarContext.class,0);
		}
		public LayoutContext layout() {
			return getRuleContext(LayoutContext.class,0);
		}
		public PromptContext prompt() {
			return getRuleContext(PromptContext.class,0);
		}
		public CollectionContext collection() {
			return getRuleContext(CollectionContext.class,0);
		}
		public ViewContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_view; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).enterView(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).exitView(this);
		}
	}

	public final ViewContext view() throws RecognitionException {
		ViewContext _localctx = new ViewContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_view);
		try {
			setState(107);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(102); layout();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(103); tabbar();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(104); collection();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(105); prompt();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(106); form();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public int _p;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ID() { return getToken(dhtmlxParser.ID, 0); }
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public PropertyContext property() {
			return getRuleContext(PropertyContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ExpressionContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState, _p);
		ExpressionContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, RULE_expression);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(110); property();
				}
				break;

			case 2:
				{
				setState(111); action();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(125);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(123);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState, _p);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(114);
						if (!(3 >= _localctx._p)) throw new FailedPredicateException(this, "3 >= $_p");
						setState(115); match(DOT);
						setState(116); match(ID);
						}
						break;

					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState, _p);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(117);
						if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
						setState(118); match(DOT);
						setState(119); match(4);
						}
						break;

					case 3:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState, _p);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(120);
						if (!(1 >= _localctx._p)) throw new FailedPredicateException(this, "1 >= $_p");
						setState(121); match(DOT);
						setState(122); action();
						}
						break;
					}
					} 
				}
				setState(127);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class PropertyContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(dhtmlxParser.ID, 0); }
		public PropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).enterProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).exitProperty(this);
		}
	}

	public final PropertyContext property() throws RecognitionException {
		PropertyContext _localctx = new PropertyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_property);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public TerminalNode RPAREN() { return getToken(dhtmlxParser.RPAREN, 0); }
		public TerminalNode ID() { return getToken(dhtmlxParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(dhtmlxParser.LPAREN, 0); }
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).enterAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).exitAction(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_action);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130); match(ID);
			setState(131); match(LPAREN);
			setState(132); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PromptContext extends ParserRuleContext {
		public Token p;
		public TerminalNode LBRACKET() { return getToken(dhtmlxParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(dhtmlxParser.RBRACKET, 0); }
		public PromptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prompt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).enterPrompt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).exitPrompt(this);
		}
	}

	public final PromptContext prompt() throws RecognitionException {
		PromptContext _localctx = new PromptContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_prompt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(134); ((PromptContext)_localctx).p = match(27);
			}
			{
			setState(135); match(LBRACKET);
			setState(136); match(RBRACKET);
			}
			 helper.addPrompt( ((PromptContext)_localctx).p ); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinkContext extends ParserRuleContext {
		public TerminalNode LINK() { return getToken(dhtmlxParser.LINK, 0); }
		public TerminalNode ID() { return getToken(dhtmlxParser.ID, 0); }
		public LinkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_link; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).enterLink(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).exitLink(this);
		}
	}

	public final LinkContext link() throws RecognitionException {
		LinkContext _localctx = new LinkContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_link);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(140); match(ID);
			setState(141); match(LINK);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LayoutContext extends ParserRuleContext {
		public Token pattern;
		public Token c;
		public TerminalNode LBRACKET() { return getToken(dhtmlxParser.LBRACKET, 0); }
		public CellsContext cells() {
			return getRuleContext(CellsContext.class,0);
		}
		public TerminalNode RBRACKET() { return getToken(dhtmlxParser.RBRACKET, 0); }
		public LayoutContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layout; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).enterLayout(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).exitLayout(this);
		}
	}

	public final LayoutContext layout() throws RecognitionException {
		LayoutContext _localctx = new LayoutContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_layout);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(143);
			((LayoutContext)_localctx).pattern = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 5) | (1L << 12) | (1L << 14) | (1L << 18) | (1L << 30) | (1L << 32) | (1L << 33) | (1L << 37) | (1L << 38))) != 0)) ) {
				((LayoutContext)_localctx).pattern = (Token)_errHandler.recoverInline(this);
			}
			consume();
			 helper.createLayout( ((LayoutContext)_localctx).pattern ); 
			{
			setState(145); match(LBRACKET);
			setState(146); cells();
			setState(147); ((LayoutContext)_localctx).c = match(RBRACKET);
			}
			}
			 helper.addContent( ((LayoutContext)_localctx).c ); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CellsContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public CellContext cell(int i) {
			return getRuleContext(CellContext.class,i);
		}
		public List<CellContext> cell() {
			return getRuleContexts(CellContext.class);
		}
		public CellsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cells; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).enterCells(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).exitCells(this);
		}
	}

	public final CellsContext cells() throws RecognitionException {
		CellsContext _localctx = new CellsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cells);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			_la = _input.LA(1);
			if (_la==8) {
				{
				setState(151); id();
				}
			}

			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 2) | (1L << 24) | (1L << 26))) != 0)) {
				{
				{
				setState(154); cell();
				}
				}
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CellContext extends ParserRuleContext {
		public Token name;
		public Token c;
		public TerminalNode LBRACKET() { return getToken(dhtmlxParser.LBRACKET, 0); }
		public CellcontentContext cellcontent() {
			return getRuleContext(CellcontentContext.class,0);
		}
		public TerminalNode RBRACKET() { return getToken(dhtmlxParser.RBRACKET, 0); }
		public CellContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cell; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).enterCell(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).exitCell(this);
		}
	}

	public final CellContext cell() throws RecognitionException {
		CellContext _localctx = new CellContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_cell);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(160);
			((CellContext)_localctx).name = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 2) | (1L << 24) | (1L << 26))) != 0)) ) {
				((CellContext)_localctx).name = (Token)_errHandler.recoverInline(this);
			}
			consume();
			  helper.createLayoutCell( ((CellContext)_localctx).name );  
			{
			setState(162); match(LBRACKET);
			setState(163); cellcontent();
			setState(164); ((CellContext)_localctx).c = match(RBRACKET);
			}
			}
			 helper.addLayoutCell( ((CellContext)_localctx).c ); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CellcontentContext extends ParserRuleContext {
		public List<TextContext> text() {
			return getRuleContexts(TextContext.class);
		}
		public List<HeightContext> height() {
			return getRuleContexts(HeightContext.class);
		}
		public ToolbarContext toolbar() {
			return getRuleContext(ToolbarContext.class,0);
		}
		public StatusContext status() {
			return getRuleContext(StatusContext.class,0);
		}
		public List<WidthContext> width() {
			return getRuleContexts(WidthContext.class);
		}
		public TextContext text(int i) {
			return getRuleContext(TextContext.class,i);
		}
		public HeightContext height(int i) {
			return getRuleContext(HeightContext.class,i);
		}
		public ViewContext view() {
			return getRuleContext(ViewContext.class,0);
		}
		public WidthContext width(int i) {
			return getRuleContext(WidthContext.class,i);
		}
		public CellcontentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cellcontent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).enterCellcontent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dhtmlxListener ) ((dhtmlxListener)listener).exitCellcontent(this);
		}
	}

	public final CellcontentContext cellcontent() throws RecognitionException {
		CellcontentContext _localctx = new CellcontentContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_cellcontent);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 28) | (1L << 40) | (1L << 41))) != 0)) {
					{
					setState(171);
					switch (_input.LA(1)) {
					case 41:
						{
						setState(168); width();
						}
						break;
					case 28:
						{
						setState(169); height();
						}
						break;
					case 40:
						{
						setState(170); text();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(175);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			setState(179);
			_la = _input.LA(1);
			if (_la==11) {
				{
				setState(178); toolbar();
				}
			}

			setState(182);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(181); view();
				}
				break;
			}
			setState(185);
			_la = _input.LA(1);
			if (_la==29) {
				{
				setState(184); status();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
